Update names and params to match indexrepo
