# docs/swagger.yaml
@@ -53,17 +53,56 @@ definitions:
           name.
         type: string
     type: object
-  internal_fetch_httphandler.indexKeyResponse:
+  indexrepo.CloudEventMetadata:
     properties:
-      indexKey:
+      datacontenttype:
+        description: |-
+          DataContentType is an optional MIME type for the data field. We almost
+          always serialize to JSON and in that case this field is implicitly
+          "application/json".
         type: string
-    type: object
-  internal_fetch_httphandler.indexKeysResponse:
-    properties:
-      indexKeys:
-        items:
-          type: string
-        type: array
+      dataschema:
+        description: DataSchema is an optional URI pointing to a schema for the data
+          field.
+        type: string
+      dataversion:
+        description: DataVersion is the version of the data type.
+        type: string
+      id:
+        description: |-
+          ID is an identifier for the event. The combination of ID and Source must
+          be unique.
+        type: string
+      key:
+        type: string
+      producer:
+        description: Producer is a specific instance, process or device that creates
+          the data structure describing the CloudEvent.
+        type: string
+      source:
+        description: Source is the context in which the event happened. In a distributed
+          system it might consist of multiple Producers.
+        type: string
+      specversion:
+        description: |-
+          SpecVersion is the version of CloudEvents specification used.
+          This is always hardcoded "1.0".
+        type: string
+      subject:
+        description: |-
+          Subject is an optional field identifying the subject of the event within
+          the context of the event producer. In practice, we always set this.
+        type: string
+      time:
+        description: |-
+          Time is an optional field giving the time at which the event occurred. In
+          practice, we always set this.
+        type: string
+      type:
+        description: |-
+          Type describes the type of event. It should generally be a reverse-DNS
+          name.
+        type: string
     type: object
 info:
   contact: {}
@@ -121,7 +160,9 @@ paths:
         "200":
           description: Returns list of index keys
           schema:
-            $ref: '#/definitions/internal_fetch_httphandler.indexKeysResponse'
+            items:
+              $ref: '#/definitions/indexrepo.CloudEventMetadata'
+            type: array
         "400":
           description: Invalid request
           schema:
@@ -173,7 +214,7 @@ paths:
         "200":
           description: Returns the latest index key
           schema:
-            $ref: '#/definitions/internal_fetch_httphandler.indexKeyResponse'
+            $ref: '#/definitions/indexrepo.CloudEventMetadata'
         "400":
           description: Invalid request
           schema:
